styles commit them

--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
         <section class="contact">
             <div class="container">
                 <h2>Contact Us</h2>
-                <p>If you have any questions or need more information, feel free to reach out to us at <a href="https://wa.me/+27607972324?text=I'm%20interested%20in%2027onHelios%20Student%20Accommodation" target="_blank" title="Chat with us on WhatsApp" aria-label="Chat with us on WhatsApp" role="button"><i class="fab fa-whatsapp"></i></a></p>
+                <p>If you have any questions or need more information, feel free to reach out to us at <br> 
+                    
+                    <a href="https://wa.me/+27607972324?text=I'm%20interested%20in%2027onHelios%20Student%20Accommodation" target="_blank" title="Chat with us on WhatsApp" aria-label="Chat with us on WhatsApp" role="button"><i class="fab fa-whatsapp"></i></a></p>
             </div>
             <div class="location">
                 <h2>Our Location</h2>
                 <p>27onHelios Student Accommodation is conveniently located near NWU Vaal Campus and VUT Vaal University of Technology. Find us easily and start your journey with us!</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3564.047831356972!2d27.878668676856964!3d-26.71091888480517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9458ff0b6b83c1%3A0xe48930fa4c779c2b!2s27%20Helios%20Ave%2C%20Bedworth%20Park%2C%20Vereeniging%2C%201939!5e0!3m2!1sen!2sza!4v1763040348506!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3564.047831356972!2d27.878668676856964!3d-26.71091888480517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9458ff0b6b83c1%3A0xe48930fa4c779c2b!2s27%20Helios%20Ave%2C%20Bedworth%20Park%2C%20Vereeniging%2C%201939!5e0!3m2!1sen!2sza!4v1763040348506!5m2!1sen!2sza" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
