commit this google verificaation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>27onHelios Student Accommodation | NSFAS-Accredited for NWU Vaal Campus & VUT Vaal University of Technology</title>
     <meta name="description" content="Discover 27onHelios, the premier student accommodation near NWU Vaal Campus and VUT Vaal University of Technology. NSFAS-accredited, secure, and fully furnished living spaces designed for student success. Including transport to and from school. APPLY NOW!">
+    <meta name="google-site-verification" content="PM0FVr2ihplfaYRVnN9VUK6a0WoNf7qVl32kqaIoRnQ" />
     <meta name="keywords" content="27onHelios, student accommodation, NWU Vaal Campus, VUT Vaal University of Technology, NSFAS-accredited accommodation, student housing, secure student living, furnished student rooms, student transport services">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
