--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>27onHelios Student Accommodation | NSFAS-Accredited for NWU Vaal Campus & VUT Vaal University of Technology</title>
     <meta name="description" content="Discover 27onHelios, the premier student accommodation near NWU Vaal Campus and VUT Vaal University of Technology. NSFAS-accredited, secure, and fully furnished living spaces designed for student success. Including transport to and from school. APPLY NOW!">
     <meta name="google-site-verification" content="PM0FVr2ihplfaYRVnN9VUK6a0WoNf7qVl32kqaIoRnQ" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8B45FN60PM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-8B45FN60PM');
+    </script>
     <meta name="keywords" content="27onHelios, student accommodation, NWU Vaal Campus, VUT Vaal University of Technology, NSFAS-accredited accommodation, student housing, secure student living, furnished student rooms, student transport services">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
