--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta name="keywords" content="27onHelios, student accommodation, NWU Vaal Campus, VUT Vaal University of Technology, NSFAS-accredited accommodation, student housing, secure student living, furnished student rooms, student transport services">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 </head>
 <body>
     <header class="hero">
@@ -78,9 +79,7 @@
         <section class="contact">
             <div class="container">
                 <h2>Contact Us</h2>
-                <p>If you have any questions or need more information, feel free to reach out to us at <br> 
-                    
-                    <a href="https://wa.me/+27607972324?text=I'm%20interested%20in%2027onHelios%20Student%20Accommodation" target="_blank" title="Chat with us on WhatsApp" aria-label="Chat with us on WhatsApp" role="button"><i class="fab fa-whatsapp"></i></a></p>
+                <p>If you have any questions or need more information, feel free to reach out on WhatsApp button on the screen.</p>
             </div>
             <div class="location">
                 <h2>Our Location</h2>
